# bricksgen

./: README.md  pyproject.toml
src/bricksgen/: __main__.py
src/signalkgen/: __main__.py
